/*
 * Copyright (c) 2020 Toast, Inc.
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 * http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */

syntax = "proto3";

package protokt.v1.testing;

import "google/protobuf/duration.proto";
import "protokt/v1/protokt.proto";

message ImportsWrapperModel {
  google.protobuf.Duration native_duration = 1 [
    (.protokt.v1.property).non_null = true
  ];

  google.protobuf.Duration java_duration = 2 [
    (.protokt.v1.property).wrap = "java.time.Duration",
    (.protokt.v1.property).non_null = true
  ];

  google.protobuf.Duration superfluous_duration = 3 [
    (.protokt.v1.property).wrap = "com.toasttab.protokt.v1.testing.options.Duration",
    (.protokt.v1.property).non_null = true
  ];
}
